--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -83,11 +83,13 @@
         }
 
         .dark_text {
-          color: #c5c5c5;
+          color: #aa2323;
           font-size: 9pt;
         }
 
-        .login_info,
+        .login_info{
+          
+        }
         .title_text {
           font-size: 14px;
         }
