--- a/camerafront/src/styles.scss
+++ b/camerafront/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.custom-dialog-container .mat-dialog-container {
+    padding: 0px;
+    overflow: hidden;
+}
