--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -50,6 +50,7 @@
 
       .login-inner-container {
         width: 100%;
+        background-color: grey;
 
         form {
           padding: 16px;
@@ -96,6 +97,7 @@
 
         .title_text {
           font-weight: 600;
+          color: white;
         }
 
         .text {
@@ -115,6 +117,7 @@
     width: 100%;
     height: 40px;
     z-index: 2;
+    background-color: black;
 
     div {
       height: 40px;
