--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,8 +1,6 @@
-<o-grid #grid attr="productGrid" title="Productos en alquiler" cols="5" query-rows="8" show-page-size="true"
-  page-size-options="4;8;16" orderable="true" quick-filter="true" grid-item-height="1:2"
-  sortable-columns="product_name;price" sort-column="" controls="true" refresh-button="true" insert-button="false"
-  pagination-controls="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }" service="products"
-  entity="product" keys="id_product"
+<o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="true"
+  grid-item-height="1:2" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
+  service="products" entity="product" keys="id_product"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
   visible-columns="main_photo;product_name;price;status;product_type;avaliable" detail-mode="none">
   <o-grid-item *ngFor="let list of grid.dataArray">
@@ -27,7 +25,7 @@
           <span>{{ 'plocation' | oTranslate}}: </span><b>{{ list.plocation }} </b>
         </div>
         <div class="avaliable">
-          <span>{{ 'avaliable' | oTranslate}}: </span> 
+          <span>{{ 'avaliable' | oTranslate}}: </span>
           <b>
             <mat-icon [ngClass]="{
                 'green-check': list.avaliable,
@@ -43,7 +41,8 @@
         </div>
       </div>
       <div class="price">
-        <b>{{ 'from' | oTranslate}} </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' | oTranslate}} </b>
+        <b>{{ 'from' | oTranslate}} </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
+          oTranslate}} </b>
       </div>
       <!-- </div> -->
     </o-column>
