--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -39,7 +39,8 @@
       </div>
     </div>
     <div class="price-container">
-      <b>{{ 'from' | oTranslate}} </b><b class="number">{{ data.price }}</b><b>€</b><b class="day">/{{ 'day' |
+      <!-- <b>{{ 'from' | oTranslate}} </b> -->
+      <b class="number">{{ data.price }}</b><b>€</b><b class="day">/{{ 'day' |
         oTranslate}} </b>
     </div>
   </div>
