--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -41,7 +41,8 @@
         </div>
       </div>
       <div class="price">
-        <b>{{ 'from' | oTranslate}} </b><b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
+        <!-- <b>{{ 'from' | oTranslate}} </b> -->
+        <b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
           oTranslate}} </b>
       </div>
       <!-- </div> -->
