--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -4,7 +4,7 @@
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
   visible-columns="main_photo;product_name;price;status;product_type;avaliable" detail-mode="none">
   <o-grid-item *ngFor="let list of grid.dataArray">
-    <o-column layout-padding (click)="openDetail(list)" class="container-item">
+    <o-column layout-padding  class="container-item" (click)="openDetail(list)">
       <!-- <div class="item-div"> -->
       <div class="image">
         <img src="data:image/png;base64,{{list.main_photo}}">
@@ -13,8 +13,6 @@
         <b>{{ list.product_name }}</b>
       </div>
       <div class="details">
-
-
         <div class="status">
           <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
         </div>
