--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -16,7 +16,7 @@
         render-false-value="highlight_off" render-type="icon" boolean-type="boolean" ></o-table-column>
         <o-table-column attr="statusname" title="status" type="translate"></o-table-column>
         <o-table-column attr="product_type" title="product_type" type="translate"></o-table-column>
-        <o-table-column attr="price" title="price" currency-symbol="€" type="currency"></o-table-column>
+        <o-table-column attr="price" title="price" currency-symbol="€" type="currency" currency-symbol-position="right"></o-table-column>
     </o-table>
   </div>
 </o-form-layout-manager>
