--- a/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
+++ b/camerafront/src/app/main/products/products-new-rental/products-new-rental.component.html
@@ -2,7 +2,8 @@
     <div fxLayout="column" class="container" layout-padding>
         <b>{{'product' | oTranslate}}: </b><span>{{data.product_name}}</span>
         <!-- <o-text-input fxFill class="input-padding" attr="product_name" required="yes"></o-text-input> -->
-        <o-daterange-input attr="date" label="pick a date" required="yes"
+        
+        <o-daterange-input attr="date" label="{{ 'INPUT.BUTTON.DATERANGE' | oTranslate }}" required="yes"
             (click)="validateReservation($event)" Filter="myFilter">
         </o-daterange-input>
         <o-text-input fxFill attr="request_text" label="request_text"></o-text-input>
