Primeros cambios front color etc

--- a/camerafront/src/assets/themes/ontimize-dark.css
+++ b/camerafront/src/assets/themes/ontimize-dark.css
@@ -34,7 +34,7 @@
 /* stylelint-enable */
 /*Application background-color*/
 .report-on-demand-sidenav .mat-expansion-panel {
-  background-color: #303030;
+  background-color: #1F333D;
 }
 
 .title-sidenav-content {
