--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -4,7 +4,7 @@
   /* height: auto; */
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(to top left, #bb958c, #3d9d91);
+  background-color: #85A3B6;
   overflow: hidden;
   /* display: flex;
   flex-direction: column;
@@ -47,7 +47,7 @@
 
 .detail-container {
   text-align: center;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  
   height: 50%;
 }
 
@@ -59,7 +59,7 @@
   font-size: 150%;
   margin: 1px 6px 1px 1px;
   overflow: hidden;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+
 }
 
 .price .number {
