--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -1,19 +1,21 @@
 .container-item {
-  width: 100%;
-  height: 95%;
+  width: 92%;
+  height: 65%;
   /* background-color: linear-gradient(to right, #0c4411, #00ff37); */
   /* background-color: rgb(119, 118, 116); */
-  background-image: linear-gradient(to top left, #bb958c, #3d9d91);
+  background-color: #85A3B6;
   border: 1px double rgb(21, 102, 91);
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   /* display: flex;
   flex-direction: column; */
   /* align-items: center;
   overflow: hidden; */
   /* justify-content: flex-end; */
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-  color: white;
+
+
 
   .image {
     height: 55%;
@@ -26,16 +28,20 @@
     /* flex: 1; */
     /* max-width: 50%; */
     /* max-height: 50%; */
-    border-top-left-radius: 50px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+  
+   
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     
   }
 
   .image img {
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -49,7 +55,7 @@
     height: 15%;
     font-size: 150%;
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
   }
   .details {
     /* flex: 1; */
@@ -57,7 +63,7 @@
     /* overflow: hidden; */
     /* margin-top: 10px; */
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  
   }
 
   .details b {
