--- a/camerafront/src/app/main/profile/profile-home/profile-home.component.css
+++ b/camerafront/src/app/main/profile/profile-home/profile-home.component.css
@@ -7,9 +7,9 @@
     width: 35%;
     padding: 10px;
     border: 5px double;
-    border-image: linear-gradient(to top left, #c08e83, #3d9d91);
+    background-color: #426D83;
     border-image-slice: 1;
-    background-color: rgb(68, 68, 68);
+
 
 }
 
