--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -9,6 +9,10 @@
   /* display: flex;
   flex-direction: column;
   align-items: center; */
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 
   /* .container2{
     height: 100%;
@@ -19,13 +23,16 @@
 
 .img-container {
   /* height: auto; */
-  border-top-left-radius: 50px;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
   height: 100%;
   width: 80%;
   overflow: hidden;
 }
 
 .img-container img {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
   object-fit: cover;
   /* width: 100%; */
   height: 100%;
