--- a/camerafront/src/app/main/main.component.html
+++ b/camerafront/src/app/main/main.component.html
@@ -1,5 +1,8 @@
+
+
 <o-app-layout show-language-selector="yes" sidenav-opened="no" >
   <router-outlet></router-outlet>
+  <o-app-layout-header position="start"> <span><img src="https://media.discordapp.net/attachments/1153576792486064158/1171087836276080671/logo-azul.png?ex=655b6789&is=6548f289&hm=984551027b0e1ee5d6e4d785bc19cfb9070827e2240066840e7af4653b4ae419&=" class="logo"></span></o-app-layout-header>
   <o-user-info-configuration show-settings="no"></o-user-info-configuration>
   <o-app-layout-header position="end">
     <button *ngIf="light" mat-icon-button [matMenuTriggerFor]="menu">
