--- a/camerafront/src/app/main/main.component.scss
+++ b/camerafront/src/app/main/main.component.scss
@@ -7,3 +7,11 @@
   background-color: #fff;
   color: #333;
 }
+
+.logo {
+  width: 150px;
+  height: 35px;
+  padding-left: 10px;
+  padding-top: 5px;
+
+}
