--- a/camerafront/src/app/main/products/products-detail/products-detail.component.css
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.css
@@ -33,6 +33,7 @@
 .img-container img {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   object-fit: cover;
   /* width: 100%; */
   height: 100%;
