bug layout-manager

--- a/camerafront/src/app/main/profile/profile-home/profile-home.component.html
+++ b/camerafront/src/app/main/profile/profile-home/profile-home.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <span>{{'YOUR DATA' | oTranslate}}:</span>
   <div class="data-container">
-    <o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column" keys="user_"
-      keys-sql-types="VARCHAR" show-header="no" header-actions="R" show-header-navigation="no" editable-detail="no">
+    <o-form #form attr="profile_detail" service="users" entity="user" fxLayout="column" keys="user_" 
+      keys-sql-types="VARCHAR" show-header="no" show-header-navigation="no" editable-detail="no">
       <o-text-input attr="user_" label="NICKNAME" Fx></o-text-input>
       <o-text-input attr="name" label="NAME"></o-text-input>
       <o-text-input attr="surname" label="SURNAME"></o-text-input>
