--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
@@ -1,15 +1,19 @@
-<div>
+<div class="container">
+<div class="detail_container">
+    <h2>{{data.product_name}}</h2>
+    <div class="img-container">
+        <img src="data:image/png;base64,{{data.main_photo}}" empty-image="assets/images/no-image.png">
+    </div>
+    <b>Profit: </b><span>{{data.profit}}€</span>
+</div>
+<div class="table_container">
     <o-table #table2 service="productsRequest" entity="myProductRequestEntry"
         columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;price;request_text;r_user;p_user"
-        visible-columns="main_photo;product_name;start_date;end_date;r_user;profit;profit_diff" query-rows="10" pageable="no"
-        insert-button="no" delete-button="no" detail-mode="none" refresh-button="none" query-on-init="no">
-        <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
-            <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes">
-            </o-table-cell-renderer-image>
-        </o-table-column>
-        <o-table-column attr="start_date" title="start_date" width="22%" type="date" format="LL"></o-table-column>
-        <o-table-column attr="end_date" title="end_date" width="22%" type="date" format="LL"></o-table-column>
-        <o-table-column attr="profit" title="profit" ></o-table-column>
+        visible-columns="start_date;end_date;r_user;profit;profit_diff" pageable="no" insert-button="no"
+        delete-button="no" detail-mode="none" refresh-button="none" query-on-init="no">
+        <o-table-column attr="start_date" title="start_date" type="date" format="L"></o-table-column>
+        <o-table-column attr="end_date" title="end_date" type="date" format="L"></o-table-column>
+        <o-table-column attr="profit" title="profit" currency-symbol="€" type="currency" currency-symbol-position="right"></o-table-column>
         <o-table-column attr="profit_diff" title="profit_diff" >
             <app-profit-dif-column-renderer></app-profit-dif-column-renderer>
         </o-table-column>
@@ -19,7 +23,8 @@
         </o-table-column-calculated> -->
     </o-table>
 </div>
-<div>
+<div class="button_container">
     <o-button attr="bconfirm" type="BASIC" label="Aceptar" layout-padding (click)="updateState()"></o-button>
     <o-button attr="bcancel" type="BASIC" label="Cancelar" layout-padding (click)="closeDialog()"></o-button>
+</div>
 </div>
