--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/profit-dif-column-renderer/profit-dif-column-renderer.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/profit-dif-column-renderer/profit-dif-column-renderer.component.html
@@ -1,8 +1,8 @@
 <ng-template #templateref let-cellvalue="cellvalue" let-rowvalue="rowvalue">
     <span *ngIf="cellvalue < 0" style="color:red;" fxLayoutAlign="end center">
-      <mat-icon>arrow_drop_down</mat-icon>{{ cellvalue }}
+      <mat-icon>remove</mat-icon>{{cellvalue*(-1)}}€
     </span>
     <span *ngIf="cellvalue >= 0" style="color:green" fxLayoutAlign="end center">
-      <mat-icon>arrow_drop_up</mat-icon>{{cellvalue }}
+      <mat-icon>add</mat-icon>{{cellvalue }}€
     </span>
   </ng-template>
