--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -1,8 +1,8 @@
 <div class="out-container">
   <o-table #tableout service="productsRequest" entity="myProductRequestEntry" keys="id_prequest"
     columns="main_photo;id_prequest;product_name;start_date;end_date;tproducts_id_product;state;price;request_text;r_user;p_user;p_phone;r_phone"
-    visible-columns="main_photo;product_name;start_date;end_date;state;profit" query-rows="10" pageable="no" insert-button="no"
-    delete-button="no" detail-mode="none" refresh-button="none" (onDataLoaded)="filterTable($event)">
+    visible-columns="main_photo;product_name;start_date;end_date;state;profit" query-rows="10" pageable="no"
+    insert-button="no" delete-button="no" detail-mode="none" refresh-button="none" (onDataLoaded)="filterTable($event)">
     <o-table-column attr="main_photo" orderable="no" searchable="no" width="64px">
       <o-table-cell-renderer-image image-type="base64" empty-image="assets/images/no-image.png" avatar="yes">
       </o-table-cell-renderer-image>
@@ -10,7 +10,7 @@
     <o-table-column attr="start_date" title="start_date" width="22%" type="date" format="L"></o-table-column>
     <o-table-column attr="end_date" title="end_date" width="22%" type="date" format="L"></o-table-column>
     <!-- <o-table-column #profit attr="profit" title="profit" >    </o-table-column> -->
-      <o-table-column-calculated attr="profit" title="profit" [operation-function]="calculateProfit">
+    <o-table-column-calculated attr="profit" title="profit" [operation-function]="calculateProfit" currency-symbol="€" type="currency" currency-symbol-position="right">
     </o-table-column-calculated>
 
     <o-table-column attr="state" title="state">
@@ -23,7 +23,6 @@
         <div>
           <div class="detail-container">
             <span fxFlex="30%"><strong>{{'ID' | oTranslate}}</strong>: {{row.id_prequest}}</span>
-            <span fxFlex="30%"><strong>{{'OWNER' | oTranslate}}</strong>: {{row.p_user}}</span>
             <span fxFlex="20%"><strong>{{'CLIENT' | oTranslate}}</strong>: {{row.r_user}}</span>
             <span fxFlex="20%"><strong>{{'PHONE' | oTranslate}}</strong>: {{row.r_phone}}</span>
             <span fxFlex="20%"><strong>{{'COMMENT' | oTranslate}}</strong>: {{row.request_text}}</span>
@@ -57,6 +56,9 @@
     <o-table-column attr="p_phone" title="phone" type="phone"></o-table-column>
     <o-table-column attr="state" title="state" class="o-table-column-centered">
       <app-status-column-renderer></app-status-column-renderer>
+    </o-table-column>
+    <o-table-column attr="cancelBtn" width="64px">
+      <o-table-cell-renderer-action (onClick)="cancelRequest($event)" icon="event_busy"></o-table-cell-renderer-action>
     </o-table-column>
   </o-table>
 </div>
