--- a/camerafront/src/app/main/products/products-home/products-home.component.css
+++ b/camerafront/src/app/main/products/products-home/products-home.component.css
@@ -1,16 +1,12 @@
 .container-item {
-  width: 92%;
-  height: 65%;
+  width: 100%;
+  height: 95%;
   /* background-color: linear-gradient(to right, #0c4411, #00ff37); */
   /* background-color: rgb(119, 118, 116); */
   background-color: #85A3B6;
-  border: 1px double rgb(21, 102, 91);
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  /* display: flex;
-  flex-direction: column; */
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
   /* align-items: center;
   overflow: hidden; */
   /* justify-content: flex-end; */
@@ -18,30 +14,22 @@
 
 
   .image {
-    height: 55%;
-    width: auto;
+    flex:9;
+    /* width: auto; */
     /* margin-right: 2px;
     margin-left: 2px; */
     overflow: hidden;
     /* margin: 5px; */
     margin: 5px 5px 0px 5px;
+    height: calc(90% - 10px);
     /* flex: 1; */
     /* max-width: 50%; */
     /* max-height: 50%; */
-  
-   
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
     
   }
 
   .image img {
-    border-top-left-radius: 30px;
-    border-top-right-radius: 30px;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-radius: 12px;
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -78,7 +66,7 @@
     width: 30px;
     vertical-align: middle;
     -webkit-background-clip: text;
-    /* background-clip: text; */
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     color: transparent;
     text-shadow: none;
 
@@ -87,7 +75,7 @@
     /* justify-content: flex-end; */
     max-height: 10%;
     text-align: right;
-    font-size: 150%;
+    font-size: 100%;
     margin: 1px 6px 1px 1px;
     overflow: hidden;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
@@ -97,6 +85,13 @@
   }
   .price .day{
     font-size: 50%;
+  }
+  .name, .details, .price {
+    flex: 1; /* These take up 1 part of the space */
+    /* Adjust as needed */
+  }
+  .hidden-info {
+    display: none;
   }
 }
 
