--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,12 +1,15 @@
 <o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="true"
   grid-item-height="1:2" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
-  service="products" entity="product" keys="id_product" orderable ="yes" detail-mode="none"
+  service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
-  visible-columns="main_photo;product_name;price;status;product_type;avaliable" sortable-columns = "price:DESC;price;avaliable:DESC;avaliable">
+  visible-columns="main_photo;product_name;price;status;product_type;avaliable"
+  sortable-columns="price:DESC;price;avaliable:DESC;avaliable">
 
 
-  <o-combo #bindingInput  o-grid-toolbar width="100px" position="start" attr="product_type" [static-data]="productTypeArray" value-column="typeText" columns="typeText"
-  visible-columns="typeText" read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected($event)" class="form-field"></o-combo>
+  <o-combo #bindingInput o-grid-toolbar width="100px" position="start" attr="product_type"
+    [static-data]="productTypeArray" value-column="typeText" columns="typeText" visible-columns="typeText"
+    read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected($event)"
+    class="form-field"></o-combo>
 
   <!-- <o-button o-grid-toolbar width="100px" position="start" attr="applyfilter"  label="APPLY_FILTER" (click)="gridFilter()"></o-button> -->
 
@@ -14,7 +17,7 @@
 
 
   <o-grid-item *ngFor="let list of grid.dataArray">
-    <o-column layout-padding  class="container-item" (click)="openDetail(list)">
+    <o-column layout-padding class="container-item" (click)="openDetail(list)">
       <!-- <div class="item-div"> -->
       <div class="image">
         <img src="data:image/png;base64,{{list.main_photo}}">
@@ -23,16 +26,16 @@
         <b>{{ list.product_name }}</b>
       </div>
       <div class="details">
-        <div class="status">
+        <div class="status" class="hidden-info">
           <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
         </div>
-        <div class="product_type">
+        <div class="product_type" class="hidden-info">
           <span>{{ 'product_type' | oTranslate}}: </span><b>{{list.product_type | oTranslate}}</b>
         </div>
-        <div class="plocation">
+        <div class="plocation" class="hidden-info">
           <span>{{ 'plocation' | oTranslate}}: </span><b>{{ list.plocation }} </b>
         </div>
-        <div class="avaliable">
+        <div class="avaliable" class="hidden-info">
           <span>{{ 'avaliable' | oTranslate}}: </span>
           <b>
             <mat-icon [ngClass]="{
