--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,9 +1,8 @@
 <o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="true"
   grid-item-height="1:2" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
-  service="products" entity="product" keys="id_product" orderable ="yes" detail-mode="none"
+  service="products" entity="product" keys="id_product" orderable ="yes" detailmode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
   visible-columns="main_photo;product_name;price;status;product_type;avaliable" sortable-columns = "price:DESC;price;avaliable:DESC;avaliable">
-
 
 
   <o-combo #bindingInput  o-grid-toolbar width="100px" position="start" attr="product_type" [static-data]="productTypeArray" value-column="typeText" columns="typeText"
