--- a/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-home/my-rentals-home.component.html
@@ -22,11 +22,11 @@
         <!-- <o-column>  -->
         <div>
           <div class="detail-container">
-            <span fxFlex="30%"><strong>{{'ID' | oTranslate}}</strong>: {{row.id_prequest}}</span>
-            <span fxFlex="20%"><strong>{{'CLIENT' | oTranslate}}</strong>: {{row.r_user}}</span>
-            <span fxFlex="20%"><strong>{{'PHONE' | oTranslate}}</strong>: {{row.r_phone}}</span>
-            <span fxFlex="20%"><strong>{{'COMMENT' | oTranslate}}</strong>: {{row.request_text}}</span>
-            <span fxFlex="20%"><strong>{{'PRICE' | oTranslate}}</strong>: {{row.price}}€</span>
+            <span fxFlex="30%"><strong>{{'id_prequest' | oTranslate}}</strong>: {{row.id_prequest}}</span>
+            <span fxFlex="20%"><strong>{{'r_user' | oTranslate}}</strong>: {{row.r_user}}</span>
+            <span fxFlex="20%"><strong>{{'r_phone' | oTranslate}}</strong>: {{row.r_phone}}</span>
+            <span fxFlex="20%"><strong>{{'request_text' | oTranslate}}</strong>: {{row.request_text}}</span>
+            <span fxFlex="20%"><strong>{{'price' | oTranslate}}</strong>: {{row.price}}€</span>
           </div>
           <div fxLayout="row wrap" fxLayoutGap="14px">
             <o-button attr="applyBtn" type="RAISED" label="Apply" layout-padding color="Accent"
