--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.css
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.css
@@ -1,23 +1,26 @@
 .container{
     height: 100%;
-    width: 100%;
+    width: auto;
 }
 .detail-container {
-    height: 30%;
+    height: 45%;
 
 }
+  .img-container {
+    border-top-left-radius: 50px;
+    height: 50%;
+    width: 100%;
+}  
 
-.detail-container img {
-    height: 200px;
-}
-
-img-container {
-    height: 100px;
-    width: 100px;
+.img-container img {
+    object-fit: cover;
+    /* width: 100%; */
+    height: 100%;
+    width: 100%;
 }
 
 .table-container {
-    height: 20%
+    height: 30%
 }
 
 .button-container {
