Reparado bug de pestañas en MyProducts

--- a/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
+++ b/camerafront/src/app/main/profile/myproducts-home/myproducts-home.component.html
@@ -1,4 +1,4 @@
-<o-form-layout-manager title="{{'MYPRODUCTS' | oTranslate }}" separator=" " mode="tab" label-columns="product_name" >
+<!-- <o-form-layout-manager title="{{'MYPRODUCTS' | oTranslate }}" separator=" " mode="tab" label-columns="product_name" > -->
   <div fxFill>
     <o-table class="container" auto-adjust="yes" auto-align-titles="yes" #table service="products" entity="myProduct" keys="id_product"
       columns="id_product;product_name;price;statusname;product_type;avaliable;main_photo;plocation;tuser_user_;status"
@@ -19,4 +19,4 @@
         <o-table-column attr="price" title="price" currency-symbol="€" type="currency" currency-symbol-position="right"></o-table-column>
     </o-table>
   </div>
-</o-form-layout-manager>
+<!-- </o-form-layout-manager> -->
