--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -1,5 +1,5 @@
 <o-grid #grid attr="productGrid" title="{{'PRODUCTS TITLE' | oTranslate}}" cols="5" query-rows="8" quick-filter="true"
-  grid-item-height="1:2" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
+  grid-item-height="2:3" insert-button="false" gutter-size="5px" fixed-header="yes" [ngStyle]="{ height: 'auto' }"
   service="products" entity="product" keys="id_product" orderable="yes" detail-mode="none"
   columns="id_product;product_name;price;status;product_type;avaliable;main_photo;plocation;tuser_user_;statusname;pdetails"
   visible-columns="main_photo;product_name;price;status;product_type;avaliable"
@@ -25,7 +25,7 @@
       <div class="name">
         <b>{{ list.product_name }}</b>
       </div>
-      <div class="details">
+      <!-- <div class="details">
         <div class="status" class="hidden-info">
           <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
         </div>
@@ -45,12 +45,8 @@
               {{ list.avaliable ? "check_circle" : "cancel" }}
             </mat-icon>
           </b>
-
-          <!-- <div class="body">
-            {{ list.body }}
-          </div> -->
         </div>
-      </div>
+      </div> -->
       <div class="price">
         <!-- <b>{{ 'from' | oTranslate}} </b> -->
         <b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
