--- a/camerafront/src/app/login/login.component.html
+++ b/camerafront/src/app/login/login.component.html
@@ -1,9 +1,16 @@
 <div class="full-page">
+  <link href="https://fonts.cdnfonts.com/css/league-spartan" rel="stylesheet" />
   <div class="login-outer-container">
     <div class="login-bg-container">
-      <h1 class="title_page">
-        {{ "PAGE_TITLE" | oTranslate }}
-      </h1>
+      <div class="img-container">
+        <img
+          src="https://cdn.discordapp.com/attachments/1153576792486064158/1172154476132581396/logo_cameraRent.png?ex=655f48ec&is=654cd3ec&hm=dcca95f54e3da2138fee8ef6f96523c4722c0c6094c243ef457532a0a39efe70&"
+          class="logo_page"
+        />
+        <h1 class="title_page">
+          {{ "PAGE_TITLE" | oTranslate }}
+        </h1>
+      </div>
     </div>
 
     <div class="wrapp-login">
