--- a/camerafront/src/app/login/login.component.scss
+++ b/camerafront/src/app/login/login.component.scss
@@ -22,11 +22,11 @@
     overflow: auto;
 
     .login-bg-container {
-      background-image: url(https://cdn.discordapp.com/attachments/1153576792486064158/1167019126393425980/pexels-rogelio-rosa-2831711.jpg?ex=654c9a41&is=653a2541&hm=e1705c8110a929e0c31fbce917dc22c5cbd30fd60f020077d92e241ccace7d39&);
+      background-image: url(https://cdn.discordapp.com/attachments/1153576792486064158/1171742723947102228/portada.png?ex=655dc973&is=654b5473&hm=b53f3eba039feff6939064abf3171b04950737d403baeea1c6c34e556fcc8ee1&);
       width: calc(100% - 640px);
       background-repeat: no-repeat;
       background-size: cover;
-      background-position: center;
+      background-position: left;
       position: relative;
       z-index: 1;
     }
@@ -154,17 +154,32 @@
     }
   }
 }
-.title_page {
-  text-align: center;
-  margin-top: 100px;
-  font-weight: bold;
-  font-size: 5rem;
-  font-family: American Typewriter, serif;
-  color: white;
-}
 
 @media screen and (max-width: 1000px) {
   .title_page {
     display: none;
   }
+}
+.img-container {
+  text-align: end;
+}
+
+.logo_page {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 150px;
+  padding-top: 370px;
+  text-align: left;
+  padding-right: 520px;
+}
+
+.title_page {
+  text-align: left;
+  margin-top: 1px;
+  font-weight: bold;
+  font-size: 1.8rem;
+  font-family: "League Spartan", sans-serif;
+  color: white;
+  padding-left: 20px;
 }
