--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -8,7 +8,7 @@
 
   <o-combo #bindingInput o-grid-toolbar width="100px" position="start" attr="product_type"
     [static-data]="productTypeArray" value-column="typeText" columns="typeText" visible-columns="typeText"
-    read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected($event)"
+    read-only="no" required="yes" null-selection="no" translate="yes" (onValueChange)="onSelected()"
     class="form-field"></o-combo>
 
   <!-- <o-button o-grid-toolbar width="100px" position="start" attr="applyfilter"  label="APPLY_FILTER" (click)="gridFilter()"></o-button> -->
