--- a/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
+++ b/camerafront/src/app/main/profile/my-rentals-conflict-details/my-rentals-conflict-details.component.html
@@ -1,6 +1,6 @@
 <o-column class="container">
     <div class="detail-container">
-        <h2>{{data.product_name| oTranslate}}</h2>{{'ID' | oTranslate}}
+        <h2>{{data.product_name| oTranslate}}</h2>
         <div class="img-container">
             <img src="data:image/png;base64,{{data.main_photo}}" empty-image="assets/images/no-image.png">
         </div>
