Avance en estilos y traducción

--- a/camerafront/src/app/main/products/products-detail/products-detail.component.html
+++ b/camerafront/src/app/main/products/products-detail/products-detail.component.html
@@ -7,7 +7,7 @@
       <b>{{ data.product_name }}</b>
     </div>
     <div class="detail-container">
-      <div class="avaliable">
+      <!-- <div class="avaliable">
         <span>{{ 'avaliable' | oTranslate}}: </span>
         <b>
           <mat-icon [ngClass]="{
@@ -17,7 +17,7 @@
             {{ data.avaliable ? "check_circle" : "cancel" }}
           </mat-icon>
         </b>
-      </div>
+      </div> -->
       <div>
         <span>{{ 'tuser_user_' | oTranslate}}</span>
         <b>: {{data.tuser_user_}}</b>
