--- a/camerafront/src/app/main/products/products-home/products-home.component.html
+++ b/camerafront/src/app/main/products/products-home/products-home.component.html
@@ -25,18 +25,18 @@
       <div class="name">
         <b>{{ list.product_name }}</b>
       </div>
-      <!-- <div class="details">
-        <div class="status" class="hidden-info">
+     <div class="details">
+        <!-- <div class="status" class="hidden-info">
           <span>{{ 'status' | oTranslate}}: </span><b>{{ list.statusname | oTranslate }} </b>
         </div>
         <div class="product_type" class="hidden-info">
           <span>{{ 'product_type' | oTranslate}}: </span><b>{{list.product_type | oTranslate}}</b>
-        </div>
-        <div class="plocation" class="hidden-info">
+        </div> -->
+        <div class="plocation">
           <span>{{ 'plocation' | oTranslate}}: </span><b>{{ list.plocation }} </b>
         </div>
-        <div class="avaliable" class="hidden-info">
-          <span>{{ 'avaliable' | oTranslate}}: </span>
+      <!--div class="avaliable" class="hidden-info">
+          <!-- <span>{{ 'avaliable' | oTranslate}}: </span>
           <b>
             <mat-icon [ngClass]="{
                 'green-check': list.avaliable,
@@ -44,9 +44,9 @@
               }">
               {{ list.avaliable ? "check_circle" : "cancel" }}
             </mat-icon>
-          </b>
-        </div>
-      </div> -->
+          </b> 
+        </div> -->
+      </div>
       <div class="price">
         <!-- <b>{{ 'from' | oTranslate}} </b> -->
         <b class="number">{{ list.price }}</b><b>€</b><b class="day">/{{ 'day' |
